--- a/xpi/content/css/linux/nav_txtonlyextra.css
+++ b/xpi/content/css/linux/nav_txtonlyextra.css
@@ -9,7 +9,7 @@
 	  box-shadow: none !important;
 	}
 
-	#navigator-toolbox .toolbarbutton-1:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-text {
+	#navigator-toolbox toolbar:not(#TabsToolbar) .toolbarbutton-1:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-text {
 	  padding: 4px !important;
 	}
 
