--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -701,6 +701,12 @@
 	  -moz-padding-start:20px !important;
 	  min-height:16px !important;
 	}
+
+	#ctraddon_pw_oldprefs label {
+	  background:url('chrome://classic_theme_restorer/content/images/prefs_incontent.png') no-repeat left !important;
+	  -moz-padding-start:20px !important;
+	  min-height:16px !important;
+	}
 	
 	#ctraddon_pw_noresizerxp label {
 	  background:url('chrome://classic_theme_restorer/content/images/resizer.png') no-repeat left !important;
