--- a/xpi/content/css/win8/mode_icons_big_extra.css
+++ b/xpi/content/css/win8/mode_icons_big_extra.css
@@ -111,10 +111,10 @@
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
 
-	#nav-bar .searchbar-textbox{
+	/*#nav-bar .searchbar-textbox{
 	  padding-top: 2px !important;
 	  padding-bottom: 2px !important;
-	}
+	}*/
 	
 	#nav-bar #urlbar,
 	window:not([chromehidden~="toolbar"]) #urlbar-container > #forward-button[disabled] {
