--- a/xpi/content/css/winaero/mode_icons_big_extra.css
+++ b/xpi/content/css/winaero/mode_icons_big_extra.css
@@ -117,10 +117,10 @@
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
 
-	#nav-bar .searchbar-textbox{
+	/*#nav-bar .searchbar-textbox{
 	  padding-top: 2px !important;
 	  padding-bottom: 2px !important;
-	}
+	}*/
 
 	#nav-bar #urlbar,
 	window:not([chromehidden~="toolbar"]) #urlbar-container > #forward-button[disabled] {
@@ -138,7 +138,7 @@
 	  transition: none !important;
 	}
 	
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image ,
+	#nav-bar #loop-button-throttled[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image,
 	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image {
 	  min-width:30px !important;
 	  height:30px !important;
