--- a/xpi/content/css/winxp/overlayextra.css
+++ b/xpi/content/css/winxp/overlayextra.css
@@ -204,6 +204,7 @@
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
+	#ctraddon_pw_noresizerxp,
 	#ctraddon_appbutton_list1{
 	  visibility: visible !important;
 	}
