--- a/xpi/content/css/linux/overlayextra.css
+++ b/xpi/content/css/linux/overlayextra.css
@@ -129,6 +129,11 @@
 	#ctraddon_pw_okbutton{
 	  display: inline !important;
 	}
+	
+	#ctraddon_pw_cappbutc1,
+	#ctraddon_pw_cappbutc2 {
+	  width:170px !important;
+	}
 
 	#ClassicTRoptionsPane #ctraddon_pw_tabMinWidth,
 	#ClassicTRoptionsPane #ctraddon_pw_tabMaxWidth{
