--- a/xpi/content/css/winaero/classictabsextra.css
+++ b/xpi/content/css/winaero/classictabsextra.css
@@ -68,9 +68,9 @@
 		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) .tabs-newtab-button{
 		  -moz-margin-end: 0px !important;
 		}
-		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
+		/*#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
 		  -moz-margin-end: -15px !important;
-		}
+		}*/
 	
 	}
 
