--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -263,6 +263,11 @@
 	  -moz-margin-start:0px !important;
 	}
 	
+	/* pinned tabs fix (Fx38+) */
+	#TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-content[pinned] {
+	  -moz-padding-end: 0px !important;
+	}
+	
 	/* TU workaround */
 	#PinnedTabsBarItems {
 	  margin-left:0px !important;
