--- a/xpi/content/css/tabs_squared-r-osx.css
+++ b/xpi/content/css/tabs_squared-r-osx.css
@@ -269,6 +269,11 @@
  	.tabbrowser-tab[pinned]:not([locked]):not([pinned]) image{
 	  -moz-margin-start:0px !important;
 	}
+	
+	/* pinned tabs fix (Fx38+) */
+	#TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-content[pinned] {
+	  -moz-padding-end: 0px !important;
+	}
 
 	/* TabUtilities workaround */
 	#PinnedTabsBarItems {
