--- a/xpi/content/css/navbar_compact.css
+++ b/xpi/content/css/navbar_compact.css
@@ -12,4 +12,21 @@
 	  margin-top:7px !important;
 	  margin-bottom:7px !important;
 	}
+	
+	#nav-bar toolbarseparator {
+	  margin-top: 6px !important;
+	  margin-bottom: 6px !important;
+	}
+
+	#nav-bar #ctraddon_puib_separator{
+	  margin-top: 8px !important;
+	  margin-bottom: 8px !important;
+	}
+	
+	#nav-bar #ctraddon_back-forward-dropmarker{
+	  margin-top: 0px !important;
+	  margin-bottom: 0px !important;
+	  padding-top: 0px !important;
+	  padding-bottom: 0px !important;
+	}
 }
