--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -289,7 +289,7 @@
 	}
 	
 	/* pinned tabs fix (Fx38+) */
-	#TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-content[pinned] {
+	#main-window[fx38plus="true"] #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-content[pinned] {
 	  -moz-padding-end: 0px !important;
 	}
 	
