--- a/xpi/content/css/closetab_forced.css
+++ b/xpi/content/css/closetab_forced.css
@@ -1,8 +1,8 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul) {
-	/* prevent TMp form hiding it, if CTRs option is active*/
-	#TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button {
+	/* prevent TMP form hiding it, if CTRs option is active*/
+	#TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]):not([protected]) .tab-close-button {
 	  visibility: visible !important;
 	  display: block !important;
 	}
