--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -495,7 +495,8 @@
 	.ntabcolorbox,
 	.ntabhovcolorbox,
 	#ntabcolorbox,
-	#ntabhovcolorbox{
+	#ntabhovcolorbox,
+	#ClassicTRoptionsPane[defaultfxtheme="true"] #ctraddon_pw_colors_ntab_t{
 	  visibility: collapse;
 	}
 	
@@ -503,8 +504,7 @@
 	#ctraddon_ccap_t_squaredc2,
 	#ctraddon_ccap_t_squared2,
 	#ctraddon_ccap_t_curved,
-	#ctraddon_ccap_t_curvedaero,
-	#ClassicTRoptionsPane[defaultfxtheme="true"] #ctraddon_pw_colors_ntab_t{
+	#ctraddon_ccap_t_curvedaero{
 	  visibility: collapse;
 	}
 	
