--- a/xpi/content/css/alt_appbutton_icons.css
+++ b/xpi/content/css/alt_appbutton_icons.css
@@ -2,17 +2,17 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 	
-	toolbar:not(#TabsToolbar) #ctraddon_appbutton > .toolbarbutton-icon {
+	/*toolbar:not(#TabsToolbar)*/ #ctraddon_appbutton {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/appbutton-dark.png") !important;
 	}
 
-	toolbar:not(#TabsToolbar) #ctraddon_appbutton:-moz-lwtheme-brighttext > .toolbarbutton-icon,
-	#TabsToolbar #ctraddon_appbutton > .toolbarbutton-icon {
+	/*toolbar:not(#TabsToolbar) #ctraddon_appbutton:-moz-lwtheme-brighttext,
+	#TabsToolbar #ctraddon_appbutton {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/appbutton-inv.png") !important;
-	}
+	}*/
 	
 	.customization-target:not(#TabsToolbar) > #ctraddon_appbutton > .toolbarbutton-icon {
-	  padding-left:7px !important;
-	  padding-right:7px !important;
+	  /*padding-left:7px !important;
+	  padding-right:7px !important;*/
 	}
 }
