--- a/xpi/content/css/mac/overlayextra.css
+++ b/xpi/content/css/mac/overlayextra.css
@@ -2,130 +2,130 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#ctraddon_bookmarks-menu-toolbar-button > .toolbarbutton-icon,
-	#ctraddon_bookmarks-button > .toolbarbutton-icon {
+	#ctraddon_bookmarks-menu-toolbar-button,
+	#ctraddon_bookmarks-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/bookmarks_mac.png");
 	}
-	#ctraddon_bookmarks-menu-toolbar-button:active > .toolbarbutton-icon,
-	#ctraddon_bookmarks-button:active > .toolbarbutton-icon {
+	#ctraddon_bookmarks-menu-toolbar-button:active,
+	#ctraddon_bookmarks-button:active {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/bookmarks2_mac.png");
 	}
-	#ctraddon_bookmarks-menu-toolbar-button:-moz-lwtheme-brighttext > .toolbarbutton-icon,
-	#ctraddon_bookmarks-button:-moz-lwtheme-brighttext > .toolbarbutton-icon{
+	#ctraddon_bookmarks-menu-toolbar-button:-moz-lwtheme-brighttext,
+	#ctraddon_bookmarks-button:-moz-lwtheme-brighttext{
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/bookmarks-inv.png");
 	}
-	#ctraddon_bookmarks-menu-toolbar-button[open] > .toolbarbutton-icon,
-	#ctraddon_bookmarks-menu-toolbar-button[open]:active > .toolbarbutton-icon,
-	#ctraddon_bookmarks-menu-toolbar-button[open]:-moz-lwtheme-brighttext > .toolbarbutton-icon,
-	#ctraddon_bookmarks-menu-toolbar-button[open]:active:-moz-lwtheme-brighttext > .toolbarbutton-icon{
+	#ctraddon_bookmarks-menu-toolbar-button[open],
+	#ctraddon_bookmarks-menu-toolbar-button[open]:active,
+	#ctraddon_bookmarks-menu-toolbar-button[open]:-moz-lwtheme-brighttext,
+	#ctraddon_bookmarks-menu-toolbar-button[open]:active:-moz-lwtheme-brighttext{
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/bookmarks3_mac.png");
 	}
-	#ctraddon_history-menu-toolbar-button > .toolbarbutton-icon,
-	#ctraddon_history-button > .toolbarbutton-icon {
+	#ctraddon_history-menu-toolbar-button,
+	#ctraddon_history-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/history_mac.png");
 	}
-	#ctraddon_history-menu-toolbar-button:active  > .toolbarbutton-icon,
-	#ctraddon_history-button:active  > .toolbarbutton-icon {
+	#ctraddon_history-menu-toolbar-button:active ,
+	#ctraddon_history-button:active  {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/history2_mac.png");
 	}
-	#ctraddon_history-menu-toolbar-button:-moz-lwtheme-brighttext > .toolbarbutton-icon,
-	#ctraddon_history-button:-moz-lwtheme-brighttext > .toolbarbutton-icon {
+	#ctraddon_history-menu-toolbar-button:-moz-lwtheme-brighttext,
+	#ctraddon_history-button:-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/history-inv.png");
 	}
-	#ctraddon_back-button > .toolbarbutton-icon {
+	#ctraddon_back-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/back_mac.png");
 	}
-	#ctraddon_back-button:active  > .toolbarbutton-icon {
+	#ctraddon_back-button:active  {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/back2_mac.png");
 	}
-	#ctraddon_back-button:-moz-lwtheme-brighttext > .toolbarbutton-icon {
+	#ctraddon_back-button:-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/back-inv.png");
 	}
-	#ctraddon_forward-button > .toolbarbutton-icon {
+	#ctraddon_forward-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/forward_mac.png");
 	}
-	#ctraddon_forward-button:active > .toolbarbutton-icon {
+	#ctraddon_forward-button:active {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/forward2_mac.png");
 	}
-	#ctraddon_forward-button:-moz-lwtheme-brighttext > .toolbarbutton-icon {
+	#ctraddon_forward-button:-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/forward-inv.png");
 	}
-	#ctraddon_stop-button > .toolbarbutton-icon {
+	#ctraddon_stop-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/stop_mac.png");
 	}
-	#ctraddon_stop-button:active > .toolbarbutton-icon {
+	#ctraddon_stop-button:active {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/stop2_mac.png");
 	}
-	#ctraddon_stop-button:-moz-lwtheme-brighttext > .toolbarbutton-icon {
+	#ctraddon_stop-button:-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/stop-inv.png");
 	}
-	#ctraddon_reload-button > .toolbarbutton-icon {
+	#ctraddon_reload-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/reload_mac.png");
 	}
-	#ctraddon_reload-button:active  > .toolbarbutton-icon {
+	#ctraddon_reload-button:active  {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/reload2_mac.png");
 	}
-	#ctraddon_reload-button:-moz-lwtheme-brighttext > .toolbarbutton-icon {
+	#ctraddon_reload-button:-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/reload-inv.png");
 	}
 	
 	/* for Retina display */
 	@media (min-resolution: 2dppx) {
-	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button) > .toolbarbutton-icon  {
+	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button)  {
 		list-style-image: url("chrome://browser/skin/Toolbar@2x.png") !important;
 	  }
-	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button):-moz-lwtheme-brighttext  > .toolbarbutton-icon  {
+	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button):-moz-lwtheme-brighttext   {
 		list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png") !important;
 	  }
 	  
-	  #main-window[defaultfxtheme="true"] #ctraddon_back-button > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_back-button {
 		-moz-image-region: rect(0, 108px, 36px, 72px) !important;
 	  }
 
-	  #main-window[defaultfxtheme="true"] #ctraddon_back-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_back-button:hover:active:not([disabled="true"]) {
 		-moz-image-region: rect(36px, 108px, 72px, 72px) !important;
 	  }
 
-	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button {
 		-moz-image-region: rect(0, 144px, 36px, 108px) !important;
 	  }
 
-	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button:hover:active:not([disabled="true"]) {
 		-moz-image-region: rect(36px, 144px, 72px, 108px) !important;
 	  }
 	  
-	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-button > .toolbarbutton-icon,
-	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-menu-toolbar-button > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-button,
+	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-menu-toolbar-button {
 		-moz-image-region: rect(0, 288px, 36px, 252px) !important;
 	  }
 	  
-	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon,
-	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-menu-toolbar-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-button:hover:active:not([disabled="true"]),
+	  #main-window[defaultfxtheme="true"] #ctraddon_bookmarks-menu-toolbar-button:hover:active:not([disabled="true"]) {
 		-moz-image-region: rect(36px, 288px, 72px, 252px) !important;
 	  }
-	  #main-window[defaultfxtheme="true"] #ctraddon_history-menu-toolbar-button > .toolbarbutton-icon,
-	  #main-window[defaultfxtheme="true"] #ctraddon_history-button > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_history-menu-toolbar-button,
+	  #main-window[defaultfxtheme="true"] #ctraddon_history-button {
 		-moz-image-region: rect(0, 360px, 36px, 324px) !important;
 	  }
 	  
-	  #main-window[defaultfxtheme="true"] #ctraddon_history-menu-toolbar-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon,
-	  #main-window[defaultfxtheme="true"] #ctraddon_history-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_history-menu-toolbar-button:hover:active:not([disabled="true"]),
+	  #main-window[defaultfxtheme="true"] #ctraddon_history-button:hover:active:not([disabled="true"]) {
 		-moz-image-region: rect(36px, 360px, 72px, 324px) !important;
 	  }
 
-	  #main-window[defaultfxtheme="true"] #ctraddon_reload-button > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_reload-button {
 		-moz-image-region: rect(0, 180px, 36px, 144px) !important;
 	  }
 	  
-	  #main-window[defaultfxtheme="true"] #ctraddon_reload-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_reload-button:hover:active:not([disabled="true"]) {
 		-moz-image-region: rect(36px, 180px, 72px, 144px) !important;
 	  }
 	  
-	  #main-window[defaultfxtheme="true"] #ctraddon_stop-button  > .toolbarbutton-icon{
+	  #main-window[defaultfxtheme="true"] #ctraddon_stop-button {
 		-moz-image-region: rect(0, 216px, 36px, 180px) !important;
 	  }
 	  
-	  #main-window[defaultfxtheme="true"] #ctraddon_stop-button:hover:active:not([disabled="true"]) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] #ctraddon_stop-button:hover:active:not([disabled="true"]) {
 		-moz-image-region: rect(36px, 216px, 72px, 180px) !important;
 	  }
 	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button,#ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_ctr-button) > .toolbarbutton-icon {
